fix the spacing on nav buttons

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -49,12 +49,16 @@
 }
 
 .nav ul {
-  display: inline;
   list-style: none;
 }
 
 .nav ul li{
-  padding: 13px 0;
+  display: inline-block;
+}
+
+.nav-button {
+  padding: 14px 15px;
+  margin: 0 10px;
 }
 
 .logo {
